--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6,24 +6,23 @@ body {
 
 header {
     text-align: center;
-    padding: 20px 0;
+    padding: 10px 0;
 }
 
 .container {
     max-width: 600px;
     margin: 0 auto;
     text-align: center;
-    padding: 20px;
 }
 
 .image-container {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .slide {
     border-radius: 50%;
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 250px;
     object-fit: cover;
     margin: 0 auto;
     display: block;
@@ -43,15 +42,74 @@ button {
     font-size: 16px;
 }
 
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+.agendar {
+    animation-name: pulse; /* Nome da animação */
+    animation-duration: 1s; /* Duração da animação */
+    animation-iteration-count: infinite; /* Repetição infinita da animação */
+    animation-timing-function: ease-in-out; /* Função de temporização da animação */
+}
+
 button:hover {
     background-color: #45a049;
 }
 
 footer {
     background-color: #f2f2f2;
-    padding: 20px;
+    padding: 20px 0;
     text-align: center;
     position: fixed;
     bottom: 0;
     width: 100%;
+}
+
+.footer-content {
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.footer-content p {
+    margin: 5px 0;
+}
+
+.footer-content a {
+    color: #333;
+    text-decoration: none;
+}
+
+.instagram-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+}
+
+.instagram-link img {
+    width: 50px;
+}
+
+.instagram-link span {
+    margin-left: 5px;
+    font-size: 16px;
+}
+
+@media (max-width: 768px) {
+    footer {
+        padding: 15px 0;
+    }
+
+    .footer-content {
+        max-width: 90%;
+    }
 }
